--- a/src/scss/resets/_resets.scss
+++ b/src/scss/resets/_resets.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Montserrat, sans-serif;
+}
+
 a{
     display: inline-block;
     text-decoration: none;
@@ -20,5 +24,6 @@ h4,
 h5,
 h6{
     font-weight: 700;
+    font-family: Moon, sans-serif;
 }
 
