[MOD] Estructura semántica de HTML + [ADDED] images

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -5,6 +5,7 @@
     --shadow-color: 0 0 10px rgba(#2c3e50, .5);
     --shadow-light-color: 0 0 10px rgba(#ffffff, .5);
     --mx-width: 75rem; 
+    --text-color: #2d3436;
 }
 
 :root{
