--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -2,10 +2,11 @@
     --first-color: #e84118;
     --dark-color: #34495e;
     --light-color: #ffffff;
-    --shadow-color: 0 0 10px rgba(#2c3e50, .5);
+    --shadow-color: 0 4px 10px rgba(#2c3e50, .5);
     --shadow-light-color: 0 0 10px rgba(#ffffff, .5);
     --mx-width: 75rem; 
     --text-color: #2d3436;
+    --border-color: #bdc3c7;
 }
 
 :root{
