--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -76,6 +76,7 @@
     width: 6rem;
     height: 3.5rem;
     display: flex;
+    position: relative;
     cursor: pointer;
 
     .photo{
@@ -88,10 +89,61 @@
         }
     }
 
-    .fa{
+    .fa-caret-down{
         font-size: 2rem;
         align-self: center;
         margin-left: 10px;
         color: var(--border-color)
+    }
+
+    &__info{
+        position: absolute;
+        top: 4em;
+        left: 100%;
+        transform: translateX(-100%);
+        min-width: 15rem;
+        padding: .8em;
+        border-radius: 1em;
+        background-color: var(--light-color);
+        
+        hr{
+            display: inline-block;
+            width: 100%;
+            height: 1px;
+            border:none;
+            margin-bottom: 1em;
+            margin-top: 1em;
+            color: var(--border-color);
+            background-color: var(--border-color);
+        }
+
+        .name{
+            display: flex;
+            align-items: center;
+            width: 100%;
+
+            & > img{
+                width: 2.4rem;
+                height: 2.4rem;
+                border-radius: 50%;
+                object-fit: cover;
+                margin-right: 10px;
+                border: 1px solid var(--border-color);
+            }
+
+            & > h3{
+                text-align: center;
+                font-size: 1em;
+            }
+        }
+
+        .option{
+
+            list-style: none;
+
+            li{
+                margin-bottom: 0.6em;
+            }
+        }
     }
 }
